wp-content/themes/betheme-child/style29.css
/*
Theme Name: Betheme Child
Theme URI: https://themes.muffingroup.com/betheme
Author: Muffin group
Author URI: https://muffingroup.com
Description: Child Theme for Betheme
Template: betheme
Version: 2.0.1
*/

:root {
  color-scheme: only light;
}

.mfn-main-slider.mfn-rev-slider {
  background: #002d6d;
}

.logo-wrapper > img {
  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.25));
}

.title {
  font-weight: 600;
}

.protondb-wrapper .mcb-column-inner {
  margin-bottom: 0px;
}

.apps-fade::after {
  background: radial-gradient(#262626 30%, rgba(0,0,0,0) 100%);
  top: 0;
  width: 100%;
  height: 100%;
  content: '';
  display: block;
  position: absolute;
}

.mfn-header-sticky-section {
  backdrop-filter: blur(10px);
  background-color: rgba(38,38,38,0.95);
  box-shadow: 0px 3px 8px rgba(0,0,0,0.25);
}

#mfn-header-template .button_label {
  white-space: nowrap !important;
}

.trailer_box .desc .subtitle, .trailer_box.plain .desc .line {
  background-color: rgba(0,0,0,0.4);
  backdrop-filter: blur(10px);
  background-image: none;
  font-weight: 600;
}

.trailer_box .title {
  color: #fff;
  font-size: 15px !important;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 10px;
  opacity: 0.75;
  font-style: italic;
}

.trailer_box .desc > .line {
  display: none !important;
  visibility: hidden !important;
}

.trailer_box:hover .desc .subtitle {
  bottom: inherit;
  font-size: 18px!important;
}

select:focus {
  color: #fff;
  background-color: #464646 !important;
}

.iso-selection {
  margin-bottom: 30px;
  float: left;
  width: 100%;
}

.code {
  padding: 5px;
  background: #000;
  border-radius: 5px;
  font-family: 'Fira Code';
  font-size: 10px;
  line-height: 14px;
  user-select: all;
  cursor: pointer;
}

.command-header {
  width: 100%;
  float: left;
  margin-bottom: 5px;
}

.command {
  background: #000;
  border-radius: 5px;
  padding: 10px;
  font-size: 10px;
  line-height:25px;
  font-family: 'Fira Code';
  user-select: all;
  cursor: pointer;
}

.code:hover,
.command:hover {
  background-color: #444;
}

#image-builder-result {
  transition: opacity 0.45s ease-in-out, transform 0.65s ease-in-out, max-height 0.35s ease-in-out;
}

#image-builder > div {
  transition: opacity 0.20s ease-in-out, transform 0.35s ease-in-out, max-height 0.15s ease-in-out;
}

.mfn-header-tmpl-menu-sidebar {
  backdrop-filter: blur(10px);
  background-color: rgba(38,38,38,0.95);
  box-shadow: -3px 0px 8px rgba(0,0,0,0.25);
}

.mfn-header-menu .mfn-menu-li > .mfn-menu-link {
  color: #fff;
}

.mfn-close-icon .icon {
  color: #fff !important;
}

.mfn-header-menu .mfn-menu-li:hover > .mfn-menu-link {
  color: #fff;
}

.hidden-fade {
  opacity: 0;
  overflow: hidden;
  transform: scale(0.75);
  max-height: 0px;
}

.shown-fade {
  opacity: 1;
  visibility: visible;
  transform: scale(1.0);
  max-height: 100%;
}

#apps {
  background-repeat: no-repeat;
  background-position: center;
}

#image-picker {
  padding-bottom: 0px;
}

rs-layer-wrap,
.icon-menu-fine {
  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
}

[class^="fa-"]::before,
rs-module [class*=" fa-"]::before,
.rb-modal-wrapper [class^="fa-"]::before,
.rb-modal-wrapper [class*=" fa-"]::before,
#rs_overview [class^="fa-"]::before,
#rs_overview [class*=" fa-"]::before,
#objectlibrary [class^="fa-"]::before,
#objectlibrary [class*=" fa-"]::before,
#waitaminute [class^="fa-"]::before,
#waitaminute [class*=" fa-"]::before,
#rs_overview_menu [class^="fa-"]::before,
#rs_overview_menu [class*=" fa-"]::before,
#builderView [class^="fa-"]::before,
#builderView [class*=" fa-"]::before {
  font-family: 'Font Awesome 5 Free'!important;
  font-weight: 900!important;
}

.tp-rs-img {
  filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.25));
}

#diy {
  padding-bottom: 25px;
}

#features .column_trailer_box {
  min-height: 25vw;
}

#image-builder-result a {
  color: #ccc;
}

#image-builder-result a:hover {
  color: #fff;
  text-decoration: underline;
}

#desktop a {
  color: #999;
}

#desktop a:hover {
  color: #000;
}

#slider-1-slide-1-layer-6,
.button-custom .button {
  font-family: "DM Sans"!important;
}

#hardware .tablet-two-third.column {
  width: 100% !important;
}

#image-builder select {
  min-width: 300px;
}

.gamemode label::after {
  content: '(This will automatically login to game mode)';
  width: 100%;
  display: inline-block;
  font-weight: 300;
  font-size: 16px;
  font-style: italic;
} 

#features {
  background-position: center;
}

.affiliated {
  color: #606060;
  font-size: 14px;
  font-style: italic;
  margin-top: 10px;
  display: block;
}

.answer-overflow-icon {
  height: 30px;
  width: 30px;
  display: inline-block;
  margin-left: 10px;
  position: absolute;
}

.hover-contrib,
.discourse-docs {
  background: #f0f0f0;
  color: #000;
  border-radius: 100%;
  padding: 5px 8px;
  font-size: 17px;
  line-height: 20px;
  cursor: pointer;
  margin-left: 5px;
}

.hover-contrib:hover,
.discourse-docs:hover {
  background: #dfdfdf;
}

.answer-overflow-icon:hover {
  filter: brightness(0.8);
}

.hover-contrib::after {
  content: url('https://repobeats.axiom.co/api/embed/86b500d79c613015ad16f56df76c8e13f3fd98ae.svg');
  left: -510px;
  position: absolute;
  top: -395px;
  width: 845px;
  padding: 15px;
  box-shadow: 0px 0px 5px rgba(0,0,0,0.25);
  background-color: #000000E3;
  border-radius: 24px;
  backdrop-filter: blur(10px);
  pointer-events: none;
  opacity: 0;
  transform: scale(0.8) translateX(100px) translateY(100px);
  transition: opacity .25s ease-in-out, transform .35s ease-in-out;
}

.hover-contrib:hover::after {
  opacity: 1;
  transform: scale(1.0);
}

.mcb-wrap-inner-tc7x20tbk {
  margin-top: 65px;
}

.slick-slide img {
  width:auto;
}

.testimonials_slider.single-photo .testimonials_slider_ul li .single-photo-img {
  border-radius: 0px !important;
  max-width: 230px !important;
  width: auto;
  height: inherit;
}

.author .title {
  font-size: 14px;
}
/* ... */

